welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: class Array takes type parameters
def reproduireMotif (T:Array, v:Int) {
                       ^