welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur());
	lireSequence(T);
	for (j<- 1 to (getMondeLargeur() - 1)) {
		decalle();
		var v:Int = litMessage().toInt
		reproduireMotif(T,v);
	}
	recule();
}
def lireSequence(T:Array[Color]) {
	T(0)=getCouleurSol();
	for (i <- 1 to T.length-1) {
		T(i)=getCouleurSol();
		avance();
	}
	recule(getMondeHauteur()-1);
}

def dessiner() {
	baisseBrosse();
	leveBrosse();
}
def reproduireMotif (T:Array, v:Int) {
	for (i<- 0 to T.length-1) {
			var u:Int = (i+v) % (T.length)
			setCouleurBrosse(T(u));
			dessiner();
			avance();
	}
}
def decalle() {
	gauche(); avance(); droite();
}